tests/errors/ty_synonym_undefined_ty_var_err/ty_synonym_undefined_ty_var_err.c
#error ty_synonym_undefined_ty_var_err:5:1 The name ''U' here should denote to some type; but not found.
